# vector

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile.am  Module.list  README.md  configure.ac
.semaphore/: major.yml  micro.yml  minor.yml  release.yml  semaphore.yml
data/: CMakeLists.txt  vector.pc.in
header/: CMakeLists.txt  Makefile.am  vector.h
header/vector/: access.c  access.h  common.c  common.h  comparison.c  comparison.h  create.c  create.h  debug.c  debug.h  delete.c  delete.h  insert.c  insert.h  move.c  move.h  remove.c  remove.h  resize.c  resize.h  search.c  search.h  shift.c  shift.h  sort.c  sort.h
info/: .gitignore  CMakeLists.txt  Doxygen.cmake  before-rtd  conf.py  index.rst  requirements.txt
info/static/: custom.css
info/vector/: access.rst  common.rst  comparison.rst  create-delete.rst  create.rst  debug.rst  delete.rst  insert.rst  move-sort.rst  move.rst  remove.rst  resize.rst  shift.rst  sort.rst
source/: CMakeLists.txt  vector.c
source/vector/: access.c  common.c  comparison.c  create.c  debug.c  delete.c  insert.c  move.c  remove.c  resize.c  search.c  shift.c  sort.c
test/: CMakeLists.txt  Makefile.am  TestVector.cmake  stub.c  system.c  test.h  vector_access.c  vector_at_veto_1.c  vector_common.c  vector_comparison.c  vector_create.c  vector_debug.c  vector_define.c  vector_define_veto_1.c  vector_delete.c  vector_duplicate.c  vector_ensure.c  vector_insert.c  vector_move.c  vector_remove.c  vector_resize.c  vector_resize_veto_1.c  vector_search.c  vector_shift.c  vector_shrink.c  vector_sort.c  vector_swap.c
tool/: C18.txt  CheckLinkerFlag.cmake  FindSphinx.cmake  documentation-filter  iwyu
