nobase_include_HEADERS = vector/common.c \
			 vector/common.h \
			 vector/access.c \
			 vector/access.h \
			 vector/comparison.c \
			 vector/comparison.h \
			 vector/create.c \
			 vector/create.h \
			 vector/debug.c \
			 vector/debug.h \
			 vector/delete.c \
			 vector/delete.h \
			 vector/insert.c \
			 vector/insert.h \
			 vector/move.c \
			 vector/move.h \
			 vector/remove.c \
			 vector/remove.h \
			 vector/resize.c \
			 vector/resize.h \
			 vector/search.c \
			 vector/search.h \
			 vector/shift.c \
			 vector/shift.h \
			 vector/sort.c \
			 vector/sort.h \
			 vector.h
